src/index.css
@import "tailwindcss";
@import './styles/fonts.css';


:root {
    overflow-x: hidden;
}

html,
body,
#root {
    width: 100%;
    overflow-x: hidden;
}

.scrollbar-hide::-webkit-scrollbar {
    display: none;
}
.scrollbar-hide {
    -ms-overflow-style: none;
    scrollbar-width: none;
}

